# SuperVox

./: OnePagermd.md  requirementsvox.md
SuperVox/: App.tsx  QA_REPORT.md  app.json  package-lock.json  package.json
SuperVox/android/: settings.gradle
SuperVox/android/app/: build.gradle
SuperVox/android/app/src/main/cpp/: AndroidAudioEngine.cpp  CMakeLists.txt  native-lib.cpp
SuperVox/android/app/src/main/java/com/supervox/: MainActivity.kt  MainApplication.kt
SuperVox/android/app/src/main/java/com/supervox/audio/: AudioModule.kt  AudioPackage.kt
SuperVox/android/app/src/main/res/values/: strings.xml
SuperVox/cpp/audio/: AudioEngine.h
SuperVox/cpp/dsp/: Processor.h  RingBuffer.h
SuperVox/cpp/ml/: MLEngine.h  TFLiteMLEngine.cpp  TFLiteMLEngine.h
SuperVox/cpp/tests/: ProcessorTest.cpp  run_tests
SuperVox/ios/: Podfile
SuperVox/ios/SuperVox/: AppDelegate.swift  AudioModule.h  AudioModule.mm  CoreMLEngine.h  CoreMLEngine.mm  Info.plist  IosAudioEngine.mm  LaunchScreen.storyboard
SuperVox/ios/SuperVox.xcodeproj/: project.pbxproj
SuperVox/ios/SuperVox.xcodeproj/xcshareddata/xcschemes/: SuperVox.xcscheme
